[tool.poetry]
name = "home_finance_tg_bot"
version = "0.1.0"
description = "Telegram bot that helps you manage your home finances @antonbat_home_finance_bot"
authors = ["Anton Batishchev <antonbat125a@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.12.1"
peewee = "^3.14.4"
psycopg2-binary = "^2.8.6"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
